--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -6,7 +6,8 @@
         <div class="row">
                 
                 
-                <div class="col-md-9"></div>
+                <div class="col-md-6"></div>
+                <div *ngIf="checkRoute()" class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-info btn-block">Generate Reports</a></div>
                 <div *ngIf="checkRoute()" class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-info btn-block">Add New Family</a></div>
             </div>
             
@@ -23,7 +24,11 @@
                       <h5 class="card-category">Click to view the individual Records</h5>
                   </div>
                   <div class="card-body">
-                    <div class="table-responsive">
+                    <mat-form-field class="example-full-width">
+                        <input (keyup)="onKey($event)" matInput placeholder="Search By Name/Id" value="">
+                    </mat-form-field>
+                    
+                    <div *ngIf="showTable" class="table-responsive">
                         <table class="table table-hover table-bordered">
                             
                               
