--- a/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
@@ -16,105 +16,126 @@
               </div>
               <div class="card-body">   
                 <form [formGroup]="addMotherForm" (ngSubmit)="onSubmit()" [hidden]="success">
-                                    
-                  <div class="row">
-                      <div class="col-md-2">
-                          <mat-form-field class="example-full-width">
-                              <input matInput placeholder="Mother ID" type="text" readonly="{{onChange()}}" formControlName="mother_id">
-                              <div *ngIf="submit && addMotherSchema.controls.mother_id.errors" class="error">
-                                  <div *ngIf="addMotherSchema.controls.mother_id.errors.required">This field is required</div>
-                              </div>
-                          </mat-form-field>
-                      </div>
-                      <div class="col-md-3">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Registration Number" type="text"readonly="{{onChange()}}" formControlName="registration_no">
-                                  <div *ngIf="submit && addMotherSchema.controls.registration_no.errors" class="error">
-                                      <div *ngIf="addMotherSchema.controls.registration_no.errors.required">This field is required</div>
-                                  </div>
-                              </mat-form-field>
-                      </div>
-                      <div class="col-md-3">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Registration Date" type="date" readonly="{{onChange()}}" formControlName="registration_date">
-                                  <div *ngIf="submit && addMotherSchema.controls.registration_date.errors" class="error">
-                                      <div *ngIf="addMotherSchema.controls.registration_date.errors.required">This field is required</div>
-                                  </div>
-                              </mat-form-field>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-3">
+                    <mat-accordion>                 
+                        <div class="row">
+                    
+                            <div class="col-md-2">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Mother ID" type="text" readonly="{{onChange()}}" formControlName="mother_id">
+                                    <div *ngIf="submit && addMotherSchema.controls.mother_id.errors" class="error">
+                                        <div *ngIf="addMotherSchema.controls.mother_id.errors.required">This field is required</div>
+                                    </div>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-3">
                               <mat-form-field class="example-full-width">
                                   <input matInput placeholder="Mother's Name" type="text" readonly="{{onChange()}}" formControlName="mothers_name">
                                   <div *ngIf="submit && addMotherSchema.controls.mothers_name.errors" class="error">
                                       <div *ngIf="addMotherSchema.controls.mothers_name.errors.required">This field is required</div>
                                   </div>
                               </mat-form-field>
-                      </div>
-                      <div class="col-md-5">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Address" type="text" readonly="{{onChange()}}" formControlName="address">
-                                  <div *ngIf="submit && addMotherSchema.controls.address.errors" class="error">
-                                      <div *ngIf="addMotherSchema.controls.address.errors.required">This field is required</div>
-                                  </div>
-                              </mat-form-field>
-                      </div>
-                      <div class="col-md-2">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Age" type="number" readonly="{{onChange()}}" formControlName="age" min="0" max="45">
-                                  <div *ngIf="submit && addMotherSchema.controls.age.errors" class="error">
-                                      <div *ngIf="addMotherSchema.controls.age.errors.required">This field is required</div>
-                                  </div>
-                              </mat-form-field>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-3">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Number of Living Children" type="number" readonly="{{onChange()}}" formControlName="no_of_living_children" min="0">
-                                  <div *ngIf="submit && addMotherSchema.controls.no_of_living_children.errors" class="error">
-                                      <div *ngIf="addMotherSchema.controls.no_of_living_children.errors.required">This field is required</div>
-                                  </div>
-                              </mat-form-field>
-                      </div>
-                      <div class="col-md-2">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Gravidity" type="number" readonly="{{onChange()}}" formControlName="gravidity" min="0">
-                                  <div *ngIf="submit && addMotherSchema.controls.gravidity.errors" class="error">
-                                          <div *ngIf="addMotherSchema.controls.gravidity.errors.required">This field is required</div>
+                            </div>
+                            
+                        </div>
+                        <mat-expansion-panel>
+                            <mat-expansion-panel-header>
+                              <mat-panel-title>
+                                <h5>Personal details</h5>
+                              </mat-panel-title>
+                              <mat-panel-description>
+                                Click to View/Edit
+                              </mat-panel-description>
+                            </mat-expansion-panel-header>     
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Registration Number" type="text"readonly="{{onChange()}}" formControlName="registration_no">
+                                        <div *ngIf="submit && addMotherSchema.controls.registration_no.errors" class="error">
+                                            <div *ngIf="addMotherSchema.controls.registration_no.errors.required">This field is required</div>
                                         </div>
-                              </mat-form-field>
-                      </div>
-                      <div class="col-md-2">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="POA" type="number" readonly="{{onChange()}}" formControlName="POA" min="0">
-                              </mat-form-field>
-                      </div>
-                      <div class="col-md-2">
-                              <mat-form-field class="example-full-width">
-                                  
-                                  <input matInput placeholder="EDD" type="date" readonly="{{onChange()}}" formControlName="EDD">
-                              </mat-form-field>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-3">
-                          <mat-form-field class="example-full-width">
-                              <input matInput placeholder="Protection against tetanus" type="text" readonly="{{onChange()}}" formControlName="protection_against_tetanus">
-                          </mat-form-field>
-                      </div>
-                      <div class="col-md-3">
-                          <mat-form-field class="example-full-width">
-                              <input matInput placeholder="Protection against rubella" type="text" readonly="{{onChange()}}" formControlName="protection_against_rubella">
-                          </mat-form-field>
-                      </div>
-                      <div class="col-md-3">
-                          <mat-form-field class="example-full-width">
-                              <input matInput placeholder="Risk conditions" type="text" readonly="{{onChange()}}" formControlName="risk_conditions">
-                          </mat-form-field>
-                      </div>
-                  </div>
+                                    </mat-form-field>
+                            </div>
+                            <div class="col-md-3">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Registration Date" type="date" readonly="{{onChange()}}" formControlName="registration_date">
+                                        <div *ngIf="submit && addMotherSchema.controls.registration_date.errors" class="error">
+                                            <div *ngIf="addMotherSchema.controls.registration_date.errors.required">This field is required</div>
+                                        </div>
+                                    </mat-form-field>
+                            </div>
+                                  <div class="col-md-5">
+                                          <mat-form-field class="example-full-width">
+                                              <input matInput placeholder="Address" type="text" readonly="{{onChange()}}" formControlName="address">
+                                              <div *ngIf="submit && addMotherSchema.controls.address.errors" class="error">
+                                                  <div *ngIf="addMotherSchema.controls.address.errors.required">This field is required</div>
+                                              </div>
+                                          </mat-form-field>
+                                  </div>
+                                  <div class="col-md-2">
+                                          <mat-form-field class="example-full-width">
+                                              <input matInput placeholder="Age" type="number" readonly="{{onChange()}}" formControlName="age" min="0" max="45">
+                                              <div *ngIf="submit && addMotherSchema.controls.age.errors" class="error">
+                                                  <div *ngIf="addMotherSchema.controls.age.errors.required">This field is required</div>
+                                              </div>
+                                          </mat-form-field>
+                                  </div>
+                              </div>
+                              <div class="row">
+                                  <div class="col-md-3">
+                                          <mat-form-field class="example-full-width">
+                                              <input matInput placeholder="Number of Living Children" type="number" readonly="{{onChange()}}" formControlName="no_of_living_children" min="0">
+                                              <div *ngIf="submit && addMotherSchema.controls.no_of_living_children.errors" class="error">
+                                                  <div *ngIf="addMotherSchema.controls.no_of_living_children.errors.required">This field is required</div>
+                                              </div>
+                                          </mat-form-field>
+                                  </div>
+                                  <div class="col-md-2">
+                                          <mat-form-field class="example-full-width">
+                                              <input matInput placeholder="Gravidity" type="number" readonly="{{onChange()}}" formControlName="gravidity" min="0">
+                                              <div *ngIf="submit && addMotherSchema.controls.gravidity.errors" class="error">
+                                                      <div *ngIf="addMotherSchema.controls.gravidity.errors.required">This field is required</div>
+                                                    </div>
+                                          </mat-form-field>
+                                  </div>
+                                  <div class="col-md-2">
+                                          <mat-form-field class="example-full-width">
+                                              <input matInput placeholder="POA" type="number" readonly="{{onChange()}}" formControlName="POA" min="0">
+                                          </mat-form-field>
+                                  </div>
+                                  <div class="col-md-2">
+                                          <mat-form-field class="example-full-width">
+                                              
+                                              <input matInput placeholder="EDD" type="date" readonly="{{onChange()}}" formControlName="EDD">
+                                          </mat-form-field>
+                                  </div>
+                              </div>
+                              <div class="row">
+                                  <div class="col-md-3">
+                                      <mat-form-field class="example-full-width">
+                                          <input matInput placeholder="Protection against tetanus" type="text" readonly="{{onChange()}}" formControlName="protection_against_tetanus">
+                                      </mat-form-field>
+                                  </div>
+                                  <div class="col-md-3">
+                                      <mat-form-field class="example-full-width">
+                                          <input matInput placeholder="Protection against rubella" type="text" readonly="{{onChange()}}" formControlName="protection_against_rubella">
+                                      </mat-form-field>
+                                  </div>
+                                  <div class="col-md-3">
+                                      <mat-form-field class="example-full-width">
+                                          <input matInput placeholder="Risk conditions" type="text" readonly="{{onChange()}}" formControlName="risk_conditions">
+                                      </mat-form-field>
+                                  </div>
+                              </div>
+                  </mat-expansion-panel>
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        <h5>Mother's Blood Test Details</h5>
+                      </mat-panel-title>
+                      <mat-panel-description>
+                        Click to View/Edit
+                      </mat-panel-description>
+                    </mat-expansion-panel-header>
                   <label>Blood sugar</label>
                   <div class="row">
                       <div class="col-md-3">
@@ -149,7 +170,16 @@
                               </mat-form-field>
                       </div>
                   </div>
-                  <label>VDRL Test</label>
+                  </mat-expansion-panel>
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        <h5>VDRL Tests</h5>
+                      </mat-panel-title>
+                      <mat-panel-description>
+                        Click to View/Edit
+                      </mat-panel-description>
+                    </mat-expansion-panel-header>
                   <div class="row">
                       
                       <div class="col-md-3">
@@ -170,7 +200,16 @@
                               </mat-form-field>
                       </div>
                   </div>
-                  <label>Mother's weight</label>
+                  </mat-expansion-panel>
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        <h5>Mother's Weight Details</h5>
+                      </mat-panel-title>
+                      <mat-panel-description>
+                        Click to View/Edit
+                      </mat-panel-description>
+                    </mat-expansion-panel-header>
                   <div class="row">
                       
                       <div class="col-md-3">
@@ -207,7 +246,16 @@
                               </mat-form-field>
                       </div>
                   </div>
-                  <label>Delivery Informations</label>
+                  </mat-expansion-panel>
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        <h5>Delivery Informations</h5>
+                      </mat-panel-title>
+                      <mat-panel-description>
+                        Click to View/Edit
+                      </mat-panel-description>
+                    </mat-expansion-panel-header>
                   <div class="row">
                       
                       <div class="col-md-2">
@@ -241,7 +289,16 @@
                               </mat-form-field>
                       </div>
                   </div>
-                  <label>Oostpartum Visits</label>
+                </mat-expansion-panel>
+                <mat-expansion-panel>
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <h5>Oostpartum Visits</h5>
+                    </mat-panel-title>
+                    <mat-panel-description>
+                      Click to View/Edit
+                    </mat-panel-description>
+                  </mat-expansion-panel-header>
                   <div class="row">
                       
                       <div class="col-md-3">
@@ -287,6 +344,8 @@
                               </mat-form-field>
                       </div>
                     </div>
+                </mat-expansion-panel>
+                    </mat-accordion>
                     <div *ngIf="onHidden()">
                         <input type="submit" value="Update" class="btn btn-info pull-right">
                     </div>
