Sinhala Translation Module Added

--- a/Frontend/src/app/MOHComponents/add-clinic/add-clinic.component.html
+++ b/Frontend/src/app/MOHComponents/add-clinic/add-clinic.component.html
@@ -20,8 +20,7 @@
     </div>-->
   <div class="card">
       <div class="card-header">
-          <h4 class="card-title">Enter Clinic Data</h4>
-          <p class="card-category">Complete your profile</p>
+          <h4 class="card-title">{{ 'clinic.enter_clinic_data' | translate }}</h4>
       </div>
       
       <div class="card-body">
