--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -20,7 +20,7 @@
           <div class="col-md-12">
               <div class="card">
                   <div class="card-header">
-                      <h4 class="card-title "><h3>View Approved Families of the Area</h3></h4>
+                      <h4 class="card-title "><h3>{{ 'family.view_approved_families_of_the_area' | translate }}</h3></h4>
                       <h5 class="card-category">Click to view the individual Records</h5>
                   </div>
                   <div class="card-body">
