--- a/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
@@ -5,7 +5,7 @@
             <div class="card">
                 <div class="card-header card-header-info">
                     <h4 class="card-title">Add approved families</h4>
-                    <p class="card-category">Complete profile</p>
+                    <p class="card-category"></p>
                 </div>
                 <div class="card-body">
                     <form [formGroup]="approvedFamilyForm" [hidden]="success" (ngSubmit)="onSubmit()">
