Simplified add families and mother baby joined

--- a/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
@@ -9,6 +9,15 @@
                 </div>
                 <div class="card-body">
                     <form [formGroup]="approvedFamilyForm" [hidden]="success" (ngSubmit)="onSubmit()">
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Family Details</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                         <div class="row">
                             <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
@@ -96,7 +105,17 @@
                           </mat-form-field>
                         </div>
                       </div>
-                      <h5>Pregnancy details</h5>
+                      </mat-expansion-panel>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Pregnancy Details</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                     
                       <h5>  Pregnancy</h5>
                       <div class="row">
                           <div class="col-md-2">
@@ -153,7 +172,17 @@
                               </mat-form-field>
                           </div>
                       </div>
-                      <h5>Family planing methods</h5>
+                      </mat-expansion-panel>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Family planing methods</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+                      
                       <h5>Frist</h5>
                       <div class="row">
                         <div class="col-md-5">
@@ -209,6 +238,16 @@
                         </mat-form-field>
                     </div>
                       </div>
+                      </mat-expansion-panel>
+                      <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                            <h5>Other Details</h5>
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            Click to View/Edit
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
                       <div class="row">
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
@@ -231,7 +270,7 @@
                               </mat-form-field>
                           </div>
                       </div>
-                      
+                      </mat-expansion-panel>
                       <input type="submit" value="Submit details" class="btn btn-danger pull-right">
                       
                       </form>
