--- a/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
+++ b/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
@@ -31,9 +31,9 @@
                                     <td>{{motherbabyjoineddata.child_name}}</td>
                                     <td>{{motherbabyjoineddata.mothers_name}}</td>
                                     <td>{{motherbabyjoineddata.address}}</td>
-                                    <td>{{motherbabyjoineddata.sex}}</td>
+                                    <td align="center">{{motherbabyjoineddata.sex}}</td>
                                     <td>{{motherbabyjoineddata.date_of_birth | date: 'yyyy/MM/dd' }}</td>
-                                    <td>{{motherbabyjoineddata.birth_weight}}</td>
+                                    <td align="center">{{motherbabyjoineddata.birth_weight}}</td>
                                    
                                     
                                     </tr>
