Simplified weight height form

--- a/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
+++ b/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
@@ -20,15 +20,7 @@
                                     </div>
                                 </mat-form-field>
                           </div>
-                          <div class="col-md-3">
-                              <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Batch No" type="text" formControlName="batch_no">
-                                  <div *ngIf="submitted && WeightHeightForm.controls.batch_no.errors" class="error">
-                                      <div *ngIf="WeightHeightForm.controls.batch_no.errors.required">This field is required</div>
-                                    </div>
-                                </mat-form-field>
-                          </div>
-                          <div class="col-md-6">
+                          <div class="col-md-5">
                               <mat-form-field class="example-full-width">
                                   <input matInput placeholder="Name Of Child" type="text" formControlName="name_of_child">
                                   <div *ngIf="submitted && WeightHeightForm.controls.name_of_child.errors" class="error">
@@ -36,7 +28,24 @@
                                     </div>
                                 </mat-form-field>
                           </div>
+                          <div class="col-md-2">
+                            <mat-form-field class="example-full-width">
+                                <input matInput placeholder="Sex" type="text" formControlName="sex">
+                                <div *ngIf="submitted && WeightHeightForm.controls.sex.errors" class="error">
+                                    <div *ngIf="WeightHeightForm.controls.sex.errors.required">This field is required</div>
+                                  </div>
+                              </mat-form-field>
+                          </div>
                         </div>
+                        <mat-expansion-panel>
+                            <mat-expansion-panel-header>
+                              <mat-panel-title>
+                                <h5>Birth Details</h5>
+                              </mat-panel-title>
+                              <mat-panel-description>
+                                Click to View/Edit
+                              </mat-panel-description>
+                            </mat-expansion-panel-header>
                         <div class="row">
                           <div class="col-md-4">
                               <mat-form-field class="example-full-width">
@@ -46,14 +55,14 @@
                                     </div>
                                 </mat-form-field>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Sex" type="text" formControlName="sex">
-                                <div *ngIf="submitted && WeightHeightForm.controls.sex.errors" class="error">
-                                    <div *ngIf="WeightHeightForm.controls.sex.errors.required">This field is required</div>
+                                <input matInput placeholder="Batch No" type="text" formControlName="batch_no">
+                                <div *ngIf="submitted && WeightHeightForm.controls.batch_no.errors" class="error">
+                                    <div *ngIf="WeightHeightForm.controls.batch_no.errors.required">This field is required</div>
                                   </div>
                               </mat-form-field>
-                          </div>
+                        </div>
                           
                         </div>
                        
@@ -82,7 +91,16 @@
                             </mat-form-field>
                           </div>
                         </div>
-                       
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          <h5>Weight Table</h5>
+                        </mat-panel-title>
+                        <mat-panel-description>
+                          Click to View/Edit
+                        </mat-panel-description>
+                      </mat-expansion-panel-header>
                         <div class="wight_field">
                             <!--start field-->
                             <h3>Weight Table</h3>
@@ -436,6 +454,16 @@
                             </div>
                             <!--end field-->
                         </div>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          <h5>Height Table</h5>
+                        </mat-panel-title>
+                        <mat-panel-description>
+                          Click to View/Edit
+                        </mat-panel-description>
+                      </mat-expansion-panel-header>
                         <div class="height_field">
                             <!--start height field-->
                             <h3>Height Table</h3>
@@ -508,6 +536,7 @@
                             </div>
                             <!--end height field-->
                         </div>
+                    </mat-expansion-panel>
                        <input type="submit" value="Submit details" class="btn btn-danger pull-right">
 
                      </form>
