--- a/Frontend/src/app/MOHComponents/view-weight-by-id/view-weight-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-weight-by-id/view-weight-by-id.component.html
@@ -36,7 +36,7 @@
                         </div>
                         <div class="col-md-4">
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Sex" type="text" readonly="{{onChange()}}" formControlName="sex">
+                                <input matInput placeholder="Sex" type="text" readonly="{{onChange()}}" formControlName="Gender">
                                 <div *ngIf="submitted && WeightHeightForm.controls.sex.errors" class="error">
                                     <div *ngIf="WeightHeightForm.controls.sex.errors.required">This field is required</div>
                                   </div>
