--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -16,14 +16,14 @@
         <mat-card-subtitle></mat-card-subtitle>
       </mat-card-header>
       <form [formGroup]="loginForm" [hidden]="success" (ngSubmit)="onSubmit()">
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Email" type="text" formControlName="username">
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password" type="password" formControlName="password">
-        </mat-form-field>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Email" type="text" formControlName="username">
+          </mat-form-field>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Password" type="password" formControlName="password">
+          </mat-form-field>
 
-        <button mat-raised-button color="primary" type="submit">Login</button>
+          <button mat-raised-button color="primary" [disabled]="!loginForm.valid" type="submit">Login</button>
 
       </form>
 
